# rust-foundation-community-grant

./: .gitignore  README.md
test_cases/: Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  rust-toolchain
test_cases/tests/: lib.rs
test_cases/tests/axum/: argument_not_extractor.stderr  extract_self_mut.stderr  extract_self_ref.stderr  generics.stderr  invalid_attrs.stderr  missing_deserialize.rs  missing_deserialize.stderr  multiple_body_extractors.stderr  multiple_paths.stderr  not_a_function.stderr  not_async.stderr  not_send.stderr  request_not_last.stderr  too_many_extractors.stderr  wrong_return_type.stderr
test_cases/tests/bevy/: system_mismatch.stderr  system_missmatch.rs  system_missmatch.stderr
test_cases/tests/chumsky/: json.rs  json.stderr
test_cases/tests/diesel/: bad_insertable_field.rs  bad_insertable_field.stderr  bad_sql_query.rs  bad_sql_query.stderr  invalid_query.rs  invalid_query.stderr  queryable_order_mismatch.rs  queryable_order_mismatch.stderr  queryable_order_missmatch.stderr
test_cases/tests/easy_ml/: recursion.rs  recursion.stderr
test_cases/tests/entrait/: missing_impl_deep.rs  missing_impl_deep.stderr
test_cases/tests/typed_builder/: mismatch.stderr  missmatch.rs  missmatch.stderr
test_cases/tests/uom/: type_mismatch.rs  type_mismatch.stderr  type_missmatch.stderr
