[package]
name = "test_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trybuild = "1"
diesel = {version = "2.0.0-rc.1", default-features = false, features = ["sqlite", "postgres", "mysql"]}
chumsky = "0.8.0"
uom = "0.33.0"
axum = "0.5.11"
axum-macros = "0.2.3"
bevy = "0.7.0"
easy-ml = "1.8.1"
typed-builder = "0.10.0"

