[package]
name = "test_cases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trybuild = "1"
diesel = {version = "2.0.0-rc.1", default-features = false, features = ["sqlite", "postgres", "mysql", "nightly-error-messages"]}
chumsky = "0.8.0"
uom = "0.33.0"
axum = "0.5.11"
axum-macros = "0.2.3"
bevy = {version = "0.9.0-dev", features = ["nightly-error-messages"]}
easy-ml = "1.8.1"
typed-builder = "0.10.0"

[patch.crates-io]
diesel = { git = "https://github.com/weiznich/diesel", rev = "958391a3e793e409d0a925e0cc2317726c2d84b2"}
bevy = {git = "https://github.com/weiznich/bevy", rev = "7adcdd2fd33fa935d53881f248fd1b7c2fbe39b8"}
